== 2.0
* Complete rewrite in Lua
  * Most of the previous features are there (but not all).
  * Added support for attributes read/write.
  * Garbage collection protection for pointers.
  * Return value optimization.
  * Garbage collection optimization (an idea from Tim Mensch).
  * Doxygen parsing (no need to provide xml).
  * Added support for nested classes and namespaces.
  * ...

== 1.1

* Minor enhancement
  * We can omit 'return 0' when defining body with yaml.
  * Automatically uses luaDestroy with subclassed with LuaObject.
  * Fixed 'deleted' method (should be present when we use LuaObject).

== 1.0.0

* Major enhancement
  * Support for yaml definition of binding body.
  * Support for superclass (reuse of definitions from the super class)
  
== 0.7.1

The tests in this release do not pass, but the generator is really better and works. I just
don't have the time to fix the tests.

* Major enhancement
  * When the object inherits from a LuaObject class, it calls luaInit(L, obj, "foo.Bar")

== 0.7.0 2011-08-19

The tests in this release do not pass, but the generator is really better and works. I just
don't have the time to fix the tests.

* Major enhancements
  * Support for finding userdata from lua table ('super').

== 0.6.7

* Major enhancements
  * Added support for LuaStackSize pseudo return value (enables direct stack manipulation).
  * Added support for Qt 'public slot:' declarations.
  * Added support for 'ignore' @dub setting.
  * Added support for custom (or no) destructors.
  * Fixed bugs related to overloaded methods and constructors.
  * Added support for const char * return type.
  * Added support for delete in C++ and/or Lua (DeletableOutOfLua class).
  * Added 'deleted' method when the class can be destroyed out of Lua.
  * Added support for custom constructors.
  * Giving access to meta-table in libname.ClassName_.
  * Changed LuaL_check... for dubL_check... to work in try/catch scope (thanks to Ignacio Burgueño)